fix: controls gap + angle up

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 8px;
-    padding: 80px 80px 20px;
+    padding: 80px 80px 30px;
     width: 100%;
     height: 100%;
 }
@@ -37,8 +37,6 @@ body {
     position: relative;
     width: calc(100% / 7 - 8px);
     height: calc(100% / 5 - 8px);
-    border: 1px solid black;
-    background-color: green;
 }
 /* __________________________________________________ */
 .user-name {
@@ -80,6 +78,12 @@ img {
     display: inline-block;
     font-size: 1em;
 }
+.fa-share-from-square {
+    color: #4bc800;
+}
+.fa-angle-up {
+    font-size: 1em;
+}
 /* __________________________________________________ */
 .mute-video {
     display: flex;
@@ -102,7 +106,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2em;
+    gap: 1.2em;
     height: 100%;
     padding-left: 20px;
 }
